# uc-vm2

./: .gitignore  Makefile  README.md  idea.md
.claude/: settings.local.json
esp32/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp32/components/ucvm/: CMakeLists.txt
esp32/main/: CMakeLists.txt  Kconfig.projbuild  esp_io_bridge.c  esp_io_bridge.h  esp_webserver.c  esp_webserver.h  esp_wifi_setup.c  esp_wifi_setup.h  main.c
esp32/web/: index.html
examples/: Makefile
examples/avr/blink/: Makefile  main.c
examples/avr/i2c_bare/: Makefile  main.c
examples/avr/i2c_wire/: i2c_wire.ino
examples/avr/tiny_blink/: Makefile  main.c
examples/avr/uart_hello/: Makefile  main.c
examples/blink/: main.c
examples/mcs51/: Makefile
examples/mcs51/blink/: main.c
examples/mcs51/ext_int/: main.c
examples/mcs51/timer_int/: main.c
examples/mcs51/uart_hello/: main.c
examples/uart_hello/: Makefile
pc/: main.c  main_mcs51.c
src/avr/: atmega328p.c  attiny85.c  avr_cpu.c  avr_cpu.h  avr_decode.c  avr_gpio.c  avr_mcu_ops.c  avr_periph.h  avr_timer.c  avr_twi.c  avr_twi_slave.c  avr_uart.c
src/core/: avr_cpu.c  avr_cpu.h  avr_decode.c
src/gdb/: gdb_stub.c  gdb_stub.h  gdb_target.h  gdb_target_avr.c  gdb_target_mcs51.c
src/io/: io_bridge.c  io_bridge.h
src/mcs51/: at89s52.c  mcs51_cpu.c  mcs51_cpu.h  mcs51_decode.c  mcs51_gpio.c  mcs51_mcu_ops.c  mcs51_periph.h  mcs51_timer.c  mcs51_uart.c
src/periph/: avr_gpio.c  avr_timer.c  avr_uart.c
src/util/: ihex.c  ihex.h
tests/: test_webapi.sh
tests/gdb/: Makefile  test_gdb.py  test_gdb_esp32.py  test_noninvasive.py  test_program.c
tools/: dap8051.py  gdb8051.py
variants/: at89s52.c  atmega328p.c  attiny85.c
